further updates to CSS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <nav>
       <ul class='nav'>
-        <li id="title">
+        <li>
           Acme Layout
         </li>
         <li>
@@ -20,20 +20,16 @@
         </li>
       </ul>
     </nav>
+    <h1>Users</h1>
     <div>
-      <h1 class='sub-title'>Users</h1>
-      <div class="create-user">
-        <h1 class='sub-title'>Create A User</h1>
-        <div>
-          <label class="left" for="fname">First Name:</label>
-          <input type="text" id="fname" name="fname" value="Jane"><br>
-          <label class="left" for="lname">Last Name:</label>
-          <input type="text" id="lname" name="lname" value="Doe"><br>
-          <div class="center">
-            <input type="reset" value="Clear">
-            <input type="submit" value="Save">
-          </div>
-      </div>
+      <h1>Create A User</h1>
+      <div>
+        <label class="left" for="fname">First Name
+        <input type="text" id="fname" name="fname" value="Jane"></label><br>
+        <label class="left" for="lname">Last Name
+        <input type="text" id="lname" name="lname" value="Doe"></label><br>
+          <input type="reset" value="Clear">
+          <input type="submit" value="Save">
     </div>
   </body>
 </html>
