--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <nav>
       <ul class='nav'>
         <li>
-          <div>
-            Acme Layout
-          </div>
+          Acme Layout
         </li>
         <li>
           <a href='/'>Users</a>
